src/components/layout.css
/* ... */
.underline {
  text-decoration: underline;
}

/**
 * Header
 */
header {
  background: #232323 url('../images/header.png') repeat fixed;
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
}

header a {
  color: #fff;
  font-weight: bold;
}

header a:hover, header a:active,
header ul li.active a, header a.active {
  color: #ffd966;
  border: 0;
  text-decoration: none;
}

header h1 {
  padding: 2rem 1.5rem;
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
}

header h1 a {
  color: #fff;
}

header h1 a:hover, header h1 a:active {
  color: #ccc;
}

header .header__language-selector {
  clear: both;
  padding: 1rem 1.5rem;
  background-color: rgba(255,255,255,0.1);
  zoom: 1;
}

header .header__language-selector:before,
header .header__language-selector:after {
  content: " ";
  display: table;
}

header .header__language-selector:after {
  clear: both;
}

header .header__language-selector p {
  color: #e3e3e3;
  padding: 0.4rem 0;
}

header .header__language-selector p strong {
  color: #ffd966;
}

header .header__language-selector ul {
  padding: 0;
  zoom: 1;
}

header .header__language-selector ul:before,
header .header__language-selector ul:after {
  content: " ";
  display: table;
}

header .header__language-selector ul:after {
  clear: both;
}

header .header__language-selector ul li {
  padding: 0;
  list-style-type: none;
  float: left;
}

header .header__language-selector ul li a {
  display: inline-block;
  /* padding: 0.4rem 1rem 0.4rem 0; */
  padding: 0.4rem 1rem;
  color: #ffd966;
  font-weight: normal;
  background-color: rgba(0,0,0,0.25);
  border-radius: 1.5rem;
  transition: background-color 0.3s;
}

header .header__language-selector ul li a.header__language-selector__more-link {
  color: #e4e4e4;
}

header .header__language-selector ul li a:hover,
header .header__language-selector ul li a:active {
  background-color: rgba(0,0,0,0.5);
}

/**
 * Nav (header and footer)
 */
nav ul {
  padding: 0;
}

nav ul li {
  padding: 0;
  list-style-type: none;
  font-weight: bold;
}

nav ul li a {
  display: block;
  padding: 1rem 1rem 1rem 1.5rem;
  text-transform: uppercase;
}

nav ul li a:hover,  nav ul li a:active {
  background-color: rgba(255, 255, 255, 0.05);
  text-decoration: none;
}

/**
 * Cards
 */
.card {
  padding: 1rem 2rem;
}

.card__container {
  zoom: 1;
  margin-top: 1rem;
}

.card__container:before, .card__container:after {
  content: " ";
  display: table;
}

.card__container:after {
  clear: both;
}

.card__content {
  background-color: #fff;
  padding: 2rem 1rem;
  margin: -1rem 1rem 0;
  position: relative;
  z-index: 2;
}

.card__content__listing h4, .card__content__listing p {
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  font-weight: normal;
}

.card__content__listing h4 {
  font-weight: bold;
  color: #343434;
}

.card__content__listing ul {
  padding: 0;
  margin-bottom: 2em;
}

.card__content__listing ul li {
  list-style: none;
  margin-bottom: 1rem;
  line-height: 1.25em;
  font-size: 0.85em;
}

.card__content__listing p small {
  display: block;
  line-height: 1.35em;
}

.card__feature {
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  position: relative;
}

.card__feature h3 {
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  font-weight: bold;
}

.card__feature__content {
  padding: 2rem 3rem;
}

.card__feature__content.has-image {
  position: absolute;
  bottom: 0;
  width: auto;
  color: #fff;
}

.card--left-orientation .card__feature__content.has-image {
  text-align: right;
  right: 0;
}

.card__feature__listing {
  margin-top: 4rem;
  line-height: 1.2em;
  clear: both;
}

.card__feature__listing h3 {
  text-transform: uppercase;
  font-size: 0.85em;
  color: #000;
  letter-spacing: 0.15em;
  margin-bottom: 1rem;
}

.card__feature__listing h4 {
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  font-weight: bold;
}

.card__feature__listing ul {
  padding: 0;
  margin-bottom: 2rem;
}

.card__feature__listing ul li {
  list-style: none;
  margin-bottom: 1rem;
}

.card__feature__listing ol {
  margin: 1rem 0;
}

/**
 * Card-specific styles
 */
.card--intro,
.card--outro {
  background: #232323 url('../images/card-intro.png') repeat fixed;
  font-size: 1.25em;
  line-height: 1.5em;
}

.card--intro .card__content,
.card--outro .card__content {
  background-color: transparent;
  border: 0;
}

.card--intro .card__content h2,
.card--outro .card__content h2 {
  color: #fff;
}

.card--intro .card__content p,
.card--outro .card__content p {
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
}

.card--intro .card__content strong,
.card--outro .card__content strong {
  color: #000;
}

.card--intro .card__content a strong,
.card--outro .card__content a strong {
  color: #21648b;
}

.card--intro .card__content p:first-child {
  margin-bottom: 1rem;
}

.card--outro .card__field {
  margin-top: 1rem;
}

.card--outro .card__field label {
  text-transform: uppercase;
  font: 0.85em 'basic-sans', 'Droid Sans', sans-serif;
  color: #232323;
}

.card--light-blue,
.card--main {
  background: #e4e4e4 url('../images/card-light-blue.png') repeat fixed;
}

.card--light-blue h2,
.card--light-blue a {
  color: rgb(73,163,206);
}

.card--light-blue .card__container {
  background-color: rgba(73,163,206,0.25);
}

.card--light-blue .card__feature {
  background: transparent url('../images/card-labs-feature-ask-georgiagov.png') no-repeat bottom left;
  background-size: contain;
  min-height: 30em;
}

.card--light-blue.book .card__feature {
  background: transparent url('../images/card-books-feature-gatsby.png') no-repeat top left;
  background-size: contain;
}

.card--light-blue .card__feature__content {
  color: #e4e4e4;
}

.card--light-blue.book .card__feature__content {
  color: #000;
}

.card--main h2,
.card--main a {
  color: #21648b;
}
/* ... */

